--- a/src/main/resources/it/gend/finex/baseController-view.fxml
+++ b/src/main/resources/it/gend/finex/baseController-view.fxml
@@ -2,11 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="apRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="385.0" prefWidth="419.0" style="-fx-background-color: #cdd1d0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.gend.finex.BaseController">
+<AnchorPane fx:id="apRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="385.0" prefWidth="419.0" style="-fx-background-color: #cdd1d0;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.gend.finex.BaseController">
    <children>
       <Label layoutX="85.0" layoutY="31.0" text="EX." textFill="#fffefe">
          <font>
@@ -34,5 +35,6 @@
       <Button fx:id="btClear3" disable="true" layoutX="349.0" layoutY="181.0" mnemonicParsing="false" onMouseClicked="#clearFileAndDisable" style="-fx-background-color: #ffdb8c;" text="clear" />
       <Button fx:id="btClear4" disable="true" layoutX="349.0" layoutY="225.0" mnemonicParsing="false" onMouseClicked="#clearFileAndDisable" style="-fx-background-color: #ffdb8c;" text="clear" />
       <Button fx:id="btClear5" disable="true" layoutX="349.0" layoutY="270.0" mnemonicParsing="false" onMouseClicked="#clearFileAndDisable" style="-fx-background-color: #ffdb8c;" text="clear" />
+      <ProgressBar fx:id="pbBar" layoutX="33.0" layoutY="71.0" prefHeight="18.0" prefWidth="238.0" progress="0.0" visible="false" />
    </children>
 </AnchorPane>
